buttonの色を青に変更

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -68,5 +68,10 @@
     body {
         background: #00ffff;
     }
+
+    button {
+        color: blue;
+
+    }
     
     input[type=number] {text-align: right;}
